--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "apn": "^1.6.2",
     "lodash.defaults": "^2.4.1",
+    "meow": "^2.0.0"
   },
   "devDependencies": {
     "mocha": "*"
