--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
   },
   "homepage": "https://github.com/matiassingers/apn-test",
   "dependencies": {
-    "apn": "^1.6.2",
-    "lodash.defaults": "^2.4.1",
-    "meow": "^2.0.0"
+    "apn": "1.6.2",
+    "lodash.defaults": "2.4.1",
+    "meow": "2.0.0"
   },
   "devDependencies": {
-    "mocha": "*"
+    "mocha": "2.0.1"
   }
 }
