--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apn-test",
-  "version": "0.1.0",
-  "description": "quickly test push notifications",
+  "version": "0.1.1",
+  "description": "easily send a test push notification",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
@@ -15,6 +15,14 @@
   "files": [
     "index.js",
     "cli.js"
+  ],
+  "keywords" : [
+    "apple push notifications",
+    "ios",
+    "push notifications",
+    "apns",
+    "apn",
+    "cli"
   ],
   "repository": {
     "type": "git",
