--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "index.js",
     "cli.js"
   ],
-  "keywords" : [
+  "keywords": [
     "apple push notifications",
     "ios",
     "push notifications",
@@ -37,6 +37,7 @@
   "dependencies": {
     "apn": "1.6.2",
     "lodash.defaults": "2.4.1",
+    "lodash.noop": "2.4.1",
     "meow": "2.0.0"
   },
   "devDependencies": {
