--- a/package.json
+++ b/package.json
@@ -36,10 +36,7 @@
   "homepage": "https://github.com/matiassingers/apn-test",
   "dependencies": {
     "apn": "1.6.2",
-    "lodash.defaults": "3.1.0",
-    "lodash.isarray": "3.0.1",
-    "lodash.isempty": "3.0.1",
-    "lodash.noop": "3.0.0",
+    "lodash": "3.6.0",
     "meow": "3.1.0"
   },
   "devDependencies": {
